                             remailer version!" errors: In chain_randfinal() we
                             selected a random value between 0 and maxrem
                             instead of 0 and maxrem - 1.  Mixmaster now uses
                             broken-chain info from stats. I hope this doesn't
                             break any Nym functionality.
                           Warn if remailer stats are older than a day.
                           Don't send messages to ourselves via the mailsystem
                             but instead place them in the pool as incoming
                             messages so that they will get processed with the
                             next pool run.
                           No longer try to send a message if there are no
                             recipients left.
                           Set default max-randhops from 20 to 4.
                           Remix-To chain is limited by max-randhops limit as
                             well.
                           Messages to more than one remailer are dropped.
                           Nym support is not compiled in by default anymore.
                           Ignore 'No reliable remailers' problems when
                             randhopping messages in middleman mode.
                             That is better than dropping them.
                           Experimental feature:  --redirect -l <chain>.
                             If you have a mixmaster message with a
                             chain starting with hop1 (you cannot know any
                             more because it already is encrypted) then
                             mix --redirect -l foo,bar < file
                             redirect the message so the chain is actually
                             foo,bar,hop1,... and places it in your pool.
                             If the total number of hops (which cannot be